# roger

./: .commitlintrc.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASING.md  ROADMAP.md  rust-toolchain.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml
docs/: install.md  rpc-protocol.md  shim.md  trust-model.md  usage.md
plugin/: Cargo.toml
plugin/src/: lib.rs  main.rs  rpc.rs
proto/: Cargo.toml
proto/src/: lib.rs
shim/: Cargo.toml
shim/src/: main.rs  pane_id.rs  rpc.rs
shim/src/commands/: display_message.rs  has_session.rs  kill_pane.rs  list_panes.rs  mod.rs  send_keys.rs  spawn.rs  stubs.rs
src/: main.rs
