[package]
name = "roger"
version = "0.1.0"
edition = "2021"
authors = ["Alexander Sivura <alexander@sivura.com>"]
description = "A Zellij plugin for orchestrating Claude Code agent teams as native panes."
repository = "https://github.com/asivura/roger"
homepage = "https://github.com/asivura/roger"
license = "MIT"
keywords = ["zellij", "claude-code", "agent-teams", "plugin", "wasm"]
categories = ["development-tools"]
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
# TODO: pin to a version verified against Zellij 0.44.3 in the first
# successful build. zellij-tile 0.43 is the current public release at
# the time of repo creation; bump as needed.
zellij-tile = "0.43"

[profile.release]
lto = true
opt-level = "s"
strip = true
