[workspace]
members = ["plugin", "proto", "shim"]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Alexander Sivura <alexander@sivura.com>"]
license = "MIT"
repository = "https://github.com/asivura/roger"
homepage = "https://github.com/asivura/roger"

[profile.release]
lto = true
opt-level = "s"
strip = true
# Panics can't usefully unwind across the wasi boundary into Zellij;
# `abort` removes the unwinding machinery and lands a measurable
# size win on the resulting .wasm. The shim inherits this too, which
# is fine — the shim should also panic-then-abort on fatal errors.
panic = "abort"
# Gives LTO more to chew on. Slower release build, smaller binary.
codegen-units = 1
