[package]
name = "roger"
version = "0.1.0"
description = "A Zellij plugin for orchestrating Claude Code agent teams as native panes."
keywords = ["zellij", "claude-code", "agent-teams", "plugin", "wasm"]
categories = ["development-tools"]
readme = "../README.md"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
# TODO: bump to 0.44 in Phase E (#13) to gain PermissionType::ReadPaneContents
# for the observability features. zellij-tile 0.43.1 is the version verified
# against the lab box's Zellij 0.44.3 today.
zellij-tile = "0.43"
# Wire types for the RPC protocol. Lives in its own crate so it can
# be tested on host target without the zellij-tile link error.
roger-proto = { path = "../proto" }
# Used directly here (not just through roger-proto) for `serde_json::from_str`,
# `from_value`, and the fallback string formatting in lib.rs.
serde_json = "1"
# `serde::de::DeserializeOwned` is the trait bound on the
# `parse_params<T>` helper in lib.rs. We don't request `derive` here
# — the derived `Deserialize` impls already live in roger-proto.
# Note: Cargo's feature unification will still enable `serde/derive`
# in the final build because roger-proto pulls it transitively;
# omitting it here just signals our direct intent. Workspace-level
# dedup of serde / serde_json versions is tracked as #41.
serde = "1"
