[package]
name = "roger"
version = "0.1.0"
description = "A Zellij plugin for orchestrating Claude Code agent teams as native panes."
keywords = ["zellij", "claude-code", "agent-teams", "plugin", "wasm"]
categories = ["development-tools"]
readme = "../README.md"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

# The plugin is built as a binary (not a cdylib library) so the
# wasm output gets `_start` + `__main_void` exports that Zellij
# 0.44.3's plugin host expects. zellij-tile's `register_plugin!`
# macro emits `fn main()`, which only becomes a `_start` export when
# the crate type is a binary.
[[bin]]
name = "roger"
path = "src/main.rs"

[dependencies]
# Bumped to 0.44 to match the host Zellij 0.44.3 plugin ABI. The host
# rejects 0.43-built plugins with "could not find exported function"
# (the wasm export contract changed between 0.43 and 0.44). The
# ReadPaneContents permission becomes available with this bump but is
# requested separately (it's a Phase E observability feature, not
# load-bearing for v0.1).
zellij-tile = "0.44"
# Wire types for the RPC protocol. Lives in its own crate so it can
# be tested on host target without the zellij-tile link error.
roger-proto = { path = "../proto" }
# Used directly here (not just through roger-proto) for `serde_json::from_str`,
# `from_value`, and the fallback string formatting in lib.rs.
serde_json = "1"
# `serde::de::DeserializeOwned` is the trait bound on the
# `parse_params<T>` helper in lib.rs. We don't request `derive` here
# — the derived `Deserialize` impls already live in roger-proto.
# Note: Cargo's feature unification will still enable `serde/derive`
# in the final build because roger-proto pulls it transitively;
# omitting it here just signals our direct intent. Workspace-level
# dedup of serde / serde_json versions is tracked as #41.
serde = "1"
