[package]
name = "roger-proto"
version = "0.1.0"
description = "Wire types for the roger RPC protocol (plugin <-> shim)."
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# This crate intentionally has NO zellij-tile dependency so it can
# compile and run unit tests on the host target. The plugin depends
# on roger-proto (this crate) for the wire types; zellij-tile only
# enters at the plugin's main.rs.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
